# Transcription_API

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  generate_certs.sh  run_tests.sh
.github/workflows/: ci.yml  release.yml
clients/: API_GUIDE.md  README.md  test_client.py
docs/: orquestador_mqtt_integration.md
docs/plans/: 2026-03-08-scalability-improvements.md
docs/superpowers/plans/: 2026-03-14-docker-layer-cache.md
docs/superpowers/specs/: 2026-03-14-docker-layer-cache-design.md
src/: pene.cpp  server.cpp
src/audio/: SimpleVAD.cpp  SimpleVAD.h
src/auth/: ApiAuthConfig.h
src/mqtt/: MQTTConfig.h  MQTTPublisher.cpp  MQTTPublisher.h  TranscriptionEvent.h
src/server/: AuthManager.cpp  AuthManager.h  ConnectionGuard.cpp  ConnectionGuard.h  ConnectionLimiter.cpp  ConnectionLimiter.h  ServerConfig.h  StreamingSession.cpp  StreamingSession.h
src/whisper/: InferenceLimiter.h  ModelCache.h  StreamingWhisperEngine.cpp  StreamingWhisperEngine.h  WhisperWrapper.cpp  WhisperWrapper.h
tests/: CMakeLists.txt  test_simple_vad.cpp  test_streaming_whisper.cpp
tests/unit/: test_connection_limiter.cpp  test_inference_limiter.cpp  test_model_cache.cpp  test_session_tracker.cpp  test_streaming_session.cpp  test_streaming_whisper_engine.cpp
